--- a/wajibisha/templates/about.html
+++ b/wajibisha/templates/about.html
@@ -17,7 +17,7 @@
 {% block content_container %}
 <div class="showcase how-it-works text-center">
     {% block about %}
-    <div class="wrapper clearfix text-center pl-5 pr-5" style="color:#707070;">
+    <div class="body-text wrapper clearfix text-center pl-5 pr-5">
         <h2>WHO WE ARE</h2>
         <br/>
         <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata
