--- a/wajibisha/templates/blocks/buttons.html
+++ b/wajibisha/templates/blocks/buttons.html
@@ -2,12 +2,12 @@
 <div class="container">
   <div class="d-flex pl-5 flex-row justify-content-center" style="margin:30px;">
     
-    <button type="button" class="pl-5 pr-5 m-5 btn btn-primary lead" style="background-color:#0067A3;font-size: 1rem;font-weight: 100;border-top-left-radius: 50px;border-bottom-left-radius: 50px;border-top-right-radius: 50px;
+    <button type="button" class="pl-5 pr-5 m-5 btn lead" style="color:white!important;background-color:#0067A3;font-size: 1rem;font-weight: 100;border-top-left-radius: 50px;border-bottom-left-radius: 50px;border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;color:#ededed;">
       <i class="fa fa-lg fa-share-alt pr-2" aria-hidden="true"></i>SHARE
     </button>
 
-<button type="button" class="pl-5 pr-5 pt-3 pb-3 m-5 btn btn-primary lead" style="background-color:#0067A3;ont-size: 1rem;font-weight: 100;border-top-left-radius: 50px;border-bottom-left-radius: 50px;border-top-right-radius: 50px;border-bottom-right-radius: 50px;">
+<button type="button" class="pl-5 pr-5 pt-3 pb-3 m-5 btn lead" style="color:white!important;background-color:#0067A3;ont-size: 1rem;font-weight: 100;border-top-left-radius: 50px;border-bottom-left-radius: 50px;border-top-right-radius: 50px;border-bottom-right-radius: 50px;">
       <i class="fa fa-lg fa-bell pr-2" alt-hidden="true"></i>GET NAIROBI UPDATES
     </button>
   </div>
