--- a/wajibisha/templates/blocks/newsletter.html
+++ b/wajibisha/templates/blocks/newsletter.html
@@ -8,7 +8,7 @@
       <div class="input-group input-group-lg border rounded">
         <input type="text" class="form-control form-control-lg rounded" placeholder="hello@example.com">
         <span class="input-group-btn">
-          <button class="btn btn-md btn-primary" type="button" style="background-color:#0067a3;width:180px;border-color:#0067a3;font-size:1.2rem;font-weight:100;border-radius:4px;">SUBCRIBE</button>
+          <button class="btn btn-md" type="button" style="color:white!important;background-color:#0067a3;width:180px;border-color:#0067a3;font-size:1.2rem;font-weight:100;border-radius:4px;">SUBCRIBE</button>
         </span>
       </div>
     </div>
