--- a/wajibisha/templates/blocks/promises-header.html
+++ b/wajibisha/templates/blocks/promises-header.html
@@ -26,8 +26,8 @@
           <b>Days in Office:</b>138<br>
           <b>Term:</b>1st<br>
         </p>
-			</div>
-		</div>
+      </div>
+    </div>
 
     <div class="column-third" style="padding-left:15rem;">
       <div class="card p-0" style="width:600px;height:260px;margin-top:-8rem;color:#707070:">
@@ -56,23 +56,23 @@
               <p class="text-left">
                 <b class="text-warning" style="font-size:1.4rem;">6</b><br>
                 Promises not fulfilled
-               </p>
+              </p>
               <p class="text-left">
                 <b class="text-danger" style="font-size:1.4rem;">3</b><br>
-            Promises stalled</p>
+              Promises stalled</p>
             </div>
           </div> 
         </div>
       </div>
     </div>
-	</div>
+  </div>
 </div>
 
-<div class="container p-0" style="height:350px;width:100%;max-width:1480px;">
- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="1480" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="container p-0" style="height:350px;max-width:100%;">
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
-<div class="text-center" style="margin-top:-4rem;">
+<div class="text-center pb-2" style="margin-top:-4rem;">
  <a hef=""><button class="btn" style="color:white;border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">ENLARGE BUTTON</button></a>
 </div>
 
