--- a/wajibisha/templates/homepage_country.html
+++ b/wajibisha/templates/homepage_country.html
@@ -15,13 +15,11 @@
     <div class="wrapper content-container">
       <div class="column-third text-left">
         <h2>WAJIBISHA</h2>
-        <p style="color:#b7e4ff;font-size:1.2rem;">Keep track of your county's <span class="yellow-text">promises</span></p>
+        <h5 class="blue-text font-weight-normal">Keep track of your county's <span class="yellow-text">promises</span></h5>
         <div class="colum-third pt-3">
-          <select class=" country form-control form-control-lg" style="width: 200px;font-size:1rem;background-color:#4CAE4E;border-color: #4CAE4E;">
-            <option value="default" disabled selected>SELECT A COUNTRY</option>
-            <option style="background-color:#4CAE4E;">Kenya</option> 
-            <option style="background-color:#4CAE4E;">Uganda</option>
-            <option style="background-color:#4CAE4E;">Tanzania</option>
+          <select class="country form-control form-control-lg">
+            <option value="default" disabled selected>SELECT A COUNTY</option>
+            <option>NAIROBI</option> 
           </select>
         </div>
       </div>
@@ -41,37 +39,37 @@
       <br/>
       <!--Start of cards-->
       <div class="card-group">
-        <div class="card" style="margin:1rem;padding:0;color:#707070;">
+        <div class="card p-0 m-3 body-text">
           <div class="pt-4">
             <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/icons/landing/Housing.svg' %}" alt="Card image cap"></div>
             <div class="card-block">
               <h5 class="card-title">HOUSING</h5>
             </div>
-            <div class="card-block text-left pt-3" style="height:11rem;background-color:#f6f9fc;">
+            <div class="details card-block text-left pt-3">
               <p class="pl-4">Country: <b>Nairobi</b></p>
               <p class="pl-4">Total no. of promises: <b>10</b></p>
               <p class="pl-4" >Promises fulfilled: <b>0</b></p> 
             </div>
           </div>
-          <div class="card" style="margin:1rem;padding:0;color:#707070;">
+          <div class="card p-0 m-3 body-text">
             <div class="pt-4">
               <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/icons/landing/health.svg' %}" alt="Card image cap"></div>
               <div class="card-block">
                 <h5 class="card-title">HEALTH</h5>
               </div>
-              <div class="card-block text-left pt-3" style="height:11rem;background-color:#f6f9fc;">
+              <div class="details card-block text-left pt-3">
                 <p class="pl-4">Country: <b>Nairobi </b></p>
                 <p class="pl-4">Total no. of promises: <b>10</b></p>
                 <p class="pl-4">Promises fulfilled:<b>1</b></p>
               </div>
             </div>
-            <div class="card" style="margin:1rem;padding:0;color:#707070;">
+            <div class="card p-0 m-3 body-text">
               <div class="pt-4">
                 <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/icons/landing/Jobs.svg' %}" alt="Card image cap"></div>
                 <div class="card-block">
                   <h5 class="card-title">JOBS</h5>
                 </div>
-                <div class="card-block text-left pt-3" style="height:11rem;background-color:#f6f9fc;">
+                <div class="details card-block text-left pt-3">
                   <p class="pl-4">Country: <b>Nairobi</b></p>
                   <p class="pl-4">Total no. of promises: <b>10</b></p>
                   <p class="pl-4">Promises fulfilled: <b>0</b></p>
