--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -39,16 +39,16 @@
       <div class="col-md-4 col-sm-12 mt-md-0 mt-sm-5 text-left">
         <p class="pt-3">
           <a href="https://codeforafrica.org" target="_blank">
-            <img src="{% static 'img/logos/cfafrica-transparent.png' %}"
-            alt="Code for Africa" style="max-height:65px;margin:2rem;width:100px;"></a>
+            <img class="footer-logo m-4" src="{% static 'img/logos/cfafrica-transparent.png' %}"
+            alt="Code for Africa"></a>
           
             <a href="https://icfj.org" target="_blank">
-              <img class="pl-3" src="{% static 'img/logos/icfj-white.png' %}" alt="ICFJ" style="max-height:65px;width:100px;margin:2rem"></a>
+              <img class="pl-3 footer-logo m-4" src="{% static 'img/logos/icfj-white.png' %}" alt="ICFJ"></a>
             </p>
             <p>
               <a href="https://www.thomsonreuters.com/en.html">
-                <img src="{% static 'img/logos/Thomson-Reuters.svg' %}"
-                alt="Thomson Reuters" style="max-height:65px;margin:10px"></a>
+                <img class="tr-logo" src="{% static 'img/logos/Thomson-Reuters.svg' %}"
+                alt="Thomson Reuters"></a>
               </p>
             </div>
           </div>
