--- a/wajibisha/templates/articles.html
+++ b/wajibisha/templates/articles.html
@@ -16,15 +16,15 @@
 {% endblock header_content %}
 
 {% block content_container %}
-<div class="container pt-5">
+<div class="articles container pt-5">
 	<div class="row justify-content-center align-items-center">
 		<div class="col-lg-12">
 			<div class="card text-white p-0" style="height:500px;">
         <img class="card-img img-fluid" src="{% static 'img/articles/igathe.png' %}" style="height:500px;">
         <div class="card-img-overlay p-0">
-          <button type="button" class="btn rounded-0" style="margin:-45px;margin-top: -80px;background-color: #0067A3;color: #ededed;padding-left:2rem;padding-right:2rem;">LATEST ARTICLE</button>
-          <div class="card-body" style="margin-top: 13.2rem;">
-            <div class="row border-0" style="background-color:grey;background:linear-gradient(0deg,black,#333 70%);opacity:0.7;padding-top:25px;height:240px;background-blend-mode:lighten;">
+          <button type="button" class="btn article-label rounded-0 pl-4 pr-4">LATEST ARTICLE</button>
+          <div class="card-content card-body">
+            <div class="lead-content row border-0">
               <div class="col-lg-12">
                 <div class="d-flex flex-row justify-content-between">
                   <h6 class="small pull-left">NAIROBI COUNTY</h6>
@@ -34,7 +34,7 @@
                   <h4 class="card-title lead text-white"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
                 </div>
                 <div>
-                  <p class="pt-0" style="color:#ededed;">By Eric Mugendi</p>
+                  <p class="pt-0">By Eric Mugendi</p>
                   <p class="text-white">In a dramatic move, Nairobi Deputy Governor Polycarp Igathe quit his position and attributed it to his own failure to win the trust
                     of his boss, Governor Mike Sonko. The move finally lifted the lid on the uneasy relationship between the pair that has...<b class="yellow-text">read more</b></p>
                   </div>
@@ -47,19 +47,21 @@
     </div>
   </div>
   <br>
+
   <!--Card articles-->
   <div class="container pl-5 pr-2">
     <div class="d-flex flex-column pr-5 pt-4">
      <hr class="text-center border-6" size="10" style="border-color:#0067A3;height:12px;width:100%;width:30% blue;">
-     <p class="pt-0" style="color:#0067A3;">MOST VIEWED ARTICLES</p>
+     <p class="pt-0 blue-text">MOST VIEWED ARTICLES</p>
     </div>
-    <div class="row pt-5" style="color:#707070;">
+
+    <div class="row pt-5 body-text">
       <div class="col-8 d-flex flex-column">
-        <div class="card d-flex flex-lg-row p-0" style="height:280px;width:660px">
+        <div class="article-card card d-flex flex-lg-row p-0">
           <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
           <div class="col-md-7">
-            <h6 class="pt-4 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-            <h4 class="card-title lead" style="width:18rem;">
+            <h6 class="pt-4 m-0 small">NAIROBI COUNTY</h6>
+            <h4 class="article-width card-title lead">
               <strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong>
             </h4>
             <div class="d-flex flex-row small text-muted">
@@ -70,11 +72,12 @@
               tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
             </div>
           </div><br>
-          <div class="card d-flex flex-lg-row p-0" style="height:280px;width:660px;margin-top:1.5rem;">
+
+          <div class="article-card card d-flex flex-lg-row p-0 mt-4">
             <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
             <div class="col-md-7">
-              <h6 class="pt-4 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-              <h4 class="card-title lead" style="width:18rem;">
+              <h6 class="pt-4 small m-0">NAIROBI COUNTY</h6>
+              <h4 class="article-width card-title lead">
                 <strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong>
               </h4>
               <div class="d-flex flex-row small text-muted">
@@ -86,12 +89,13 @@
               </div>
             </div><br>
           </div>
+
           <div class="col-4">
-            <div class="card p-0" style="height:610px;width:300px;">
+            <div class="card-hw card p-0">
               <img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img-body p-0" alt="Story Image" style="height:300px;">
               <div class="card-body">
-                <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-                <h4 class="card-title lead" style="width:18rem;">
+                <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+                <h4 class="article-width card-title lead">
                   <strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong>
                 </h4>
                 <div class="d-flex small text-muted">
@@ -106,11 +110,11 @@
           </div>
         </div>
         <!--End of articles-->
-        <div class="container pl-2" style="height:200vh;min-height;100%;color:#707070;">
+        <div class="container pl-2 body-text " style="height:200vh;min-height;100%;">
           <div class="container ml-3 pl-4">
             <div class="d-flex flex-column pr-5 pt-5">
              <hr class="text-center border-6" size="10" style="border-color:#0067A3;height:12px;width:100%;">
-             <p class="pt-0" style="color:#0067A3;">PREVIOUS ARTICLES</p>
+             <p class="pt-0 blue-text">PREVIOUS ARTICLES</p>
            </div>   
          </div>
           <div class="row pl-5 pr-5 pt-5 pb-5">
@@ -118,8 +122,8 @@
               <div class="card p-0" style="height:580px;">
                 <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                 <div class="card-body">
-                  <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-                  <h4 class="card-title lead" style="width:18rem;"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+                  <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+                  <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
                   <div class="d-flex small justify-content-between text-muted">
                     <p class="pull-left">By Eric Mugendi</p>
                     <p class="pull-right">Sat 16th Dec 2017</p>
@@ -131,8 +135,8 @@
                 <div class="card p-0" style="height:580px;">
                   <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                   <div class="card-body">
-                    <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-                    <h4 class="card-title lead" style="width:18rem;"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+                    <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+                    <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
                     <div class="d-flex small justify-content-between text-muted">
                       <p class="pull-left">By Eric Mugendi</p>
                       <p class="pull-right">Sat 16th Dec 2017</p>
@@ -144,8 +148,8 @@
                   <div class="card p-0" style="height:580px;">
                     <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                     <div class="card-body">
-                      <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-                      <h4 class="card-title lead" style="width:18rem;"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+                      <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+                      <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
                       <div class="d-flex small justify-content-between text-muted">
                         <p class="pull-left">By Eric Mugendi</p>
                         <p class="pull-right">Sat 16th Dec 2017</p>
@@ -161,8 +165,8 @@
                     <div class="card p-0" style="height:580px;">
                       <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                       <div class="card-body">
-                        <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-                        <h4 class="card-title lead" style="width:18rem;"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+                        <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+                        <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
                         <div class="d-flex small justify-content-between text-muted">
                           <p class="pull-left">By Eric Mugendi</p>
                           <p class="pull-right">Sat 16th Dec 2017</p>
@@ -174,8 +178,8 @@
                       <div class="card p-0" style="height:580px;">
                         <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                         <div class="card-body">
-                          <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-                          <h4 class="card-title lead" style="width:18rem;"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+                          <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+                          <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
                           <div class="d-flex small justify-content-between text-muted">
                             <p class="pull-left">By Eric Mugendi</p>
                             <p class="pull-right">Sat 16th Dec 2017</p>
@@ -187,8 +191,8 @@
                         <div class="card p-0" style="height:580px;">
                           <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                           <div class="card-body">
-                            <h6 class="pt-2 small" style="margin:0!important;">NAIROBI COUNTY</h6>
-                            <h4 class="card-title lead" style="width:18rem;"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+                            <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+                            <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
                             <div class="d-flex small justify-content-between text-muted">
                               <p class="pull-left">By Eric Mugendi</p>
                               <p class="pull-right">Sat 16th Dec 2017</p>
