--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -266,3 +266,13 @@ select.form-control.form-control-lg {
   width:300px;
 }
 
+.hr-nav {
+  border-color:#0067A3;
+  height:12px;
+  width:100%;
+}
+
+.card-height {
+  height:580px;
+}
+
