--- a/wajibisha/templates/articles.html
+++ b/wajibisha/templates/articles.html
@@ -16,7 +16,7 @@
 {% endblock header_content %}
 
 {% block content_container %}
-<div class="articles container pt-5">
+<div class="articles container body-text pt-5">
 	<div class="row justify-content-center align-items-center">
 		<div class="col-lg-12">
 			<div class="card text-white p-0" style="height:500px;">
@@ -51,16 +51,32 @@
   <!--Card articles-->
   <div class="container pl-5 pr-2">
     <div class="d-flex flex-column pr-5 pt-4">
-     <hr class="text-center border-6" size="10" style="border-color:#0067A3;height:12px;width:100%;width:30% blue;">
-     <p class="pt-0 blue-text">MOST VIEWED ARTICLES</p>
-    </div>
+     <hr class="text-center border-6" size="10">
+     <p class="pt-0" style="color:blue;">MOST VIEWED ARTICLES</p>
+   </div>
 
-    <div class="row pt-5 body-text">
-      <div class="col-8 d-flex flex-column">
-        <div class="article-card card d-flex flex-lg-row p-0">
+   <div class="row pt-5 body-text">
+    <div class="col-8 d-flex flex-column">
+      <div class="article-card card d-flex flex-lg-row p-0">
+        <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
+        <div class="col-md-7">
+          <h6 class="pt-4 m-0 small">NAIROBI COUNTY</h6>
+          <h4 class="article-width card-title lead">
+            <strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong>
+          </h4>
+          <div class="d-flex flex-row small text-muted">
+            <p class="offset-0">By Eric Mugendi</p>
+            <p class="offset-3">Sat 16th Dec 2017</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
+          </div>
+        </div><br>
+
+        <div class="article-card card d-flex flex-lg-row p-0 mt-4">
           <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
           <div class="col-md-7">
-            <h6 class="pt-4 m-0 small">NAIROBI COUNTY</h6>
+            <h6 class="pt-4 small m-0">NAIROBI COUNTY</h6>
             <h4 class="article-width card-title lead">
               <strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong>
             </h4>
@@ -72,33 +88,56 @@
               tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
             </div>
           </div><br>
+        </div>
 
-          <div class="article-card card d-flex flex-lg-row p-0 mt-4">
-            <div class="col-md-5 p-0"><img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img p-0" alt="Image of story" height="280px"></div>
-            <div class="col-md-7">
-              <h6 class="pt-4 small m-0">NAIROBI COUNTY</h6>
+        <div class="col-4">
+          <div class="card-hw card p-0">
+            <img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img-body p-0" alt="Story Image" style="height:300px;">
+            <div class="card-body">
+              <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
               <h4 class="article-width card-title lead">
                 <strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong>
               </h4>
-              <div class="d-flex flex-row small text-muted">
-                <p class="offset-0">By Eric Mugendi</p>
-                <p class="offset-3">Sat 16th Dec 2017</p>
+              <div class="d-flex small text-muted">
+                <p class="pull-left">By Eric Mugendi</p>
+                <p class="pull-right">Sat 16th Dec 2017</p>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
               </div>
-            </div><br>
+            </div>
           </div>
-
-          <div class="col-4">
-            <div class="card-hw card p-0">
-              <img src="{% static 'img/articles/fidelodingaroad.jpg' %}" class="card-img-body p-0" alt="Story Image" style="height:300px;">
+        </div>
+      </div>
+      <!--End of articles-->
+      <div class="container pl-2 body-text " style="height:200vh;min-height;100%;">
+        <div class="container ml-3 pl-4">
+          <div class="d-flex flex-column pr-5 pt-5">
+           <hr class="hr-nav text-center border-6" size="10">
+           <p class="pt-0 blue-text" style="color:blue;">PREVIOUS ARTICLES</p>
+         </div>   
+       </div>
+       <div class="row pl-5 pr-5 pt-5 pb-5">
+        <div class="card-deck">
+          <div class="card-height card p-0">
+            <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
+            <div class="card-body">
+              <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
+              <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+              <div class="d-flex small justify-content-between text-muted">
+                <p class="pull-left">By Eric Mugendi</p>
+                <p class="pull-right">Sat 16th Dec 2017</p>
+              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
+              </div>
+            </div>
+            <div class="card-height card p-0">
+              <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
               <div class="card-body">
                 <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
-                <h4 class="article-width card-title lead">
-                  <strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong>
-                </h4>
-                <div class="d-flex small text-muted">
+                <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
+                <div class="d-flex small justify-content-between text-muted">
                   <p class="pull-left">By Eric Mugendi</p>
                   <p class="pull-right">Sat 16th Dec 2017</p>
                 </div>
@@ -106,20 +145,7 @@
                   tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <!--End of articles-->
-        <div class="container pl-2 body-text " style="height:200vh;min-height;100%;">
-          <div class="container ml-3 pl-4">
-            <div class="d-flex flex-column pr-5 pt-5">
-             <hr class="text-center border-6" size="10" style="border-color:#0067A3;height:12px;width:100%;">
-             <p class="pt-0 blue-text">PREVIOUS ARTICLES</p>
-           </div>   
-         </div>
-          <div class="row pl-5 pr-5 pt-5 pb-5">
-            <div class="card-deck">
-              <div class="card p-0" style="height:580px;">
+              <div class="card-height card p-0">
                 <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                 <div class="card-body">
                   <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
@@ -132,7 +158,11 @@
                     tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
                   </div>
                 </div>
-                <div class="card p-0" style="height:580px;">
+              </div>
+            </div>
+            <div class="row pl-5 pr-5 pt-5 pb-5">
+              <div class="card-deck">
+                <div class="card-height card p-0">
                   <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                   <div class="card-body">
                     <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
@@ -145,7 +175,7 @@
                       tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
                     </div>
                   </div>
-                  <div class="card p-0" style="height:580px;">
+                  <div class="card-height card p-0">
                     <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                     <div class="card-body">
                       <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
@@ -158,11 +188,7 @@
                         tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
                       </div>
                     </div>
-                  </div>
-                </div>
-                <div class="row pl-5 pr-5 pt-5 pb-5">
-                  <div class="card-deck">
-                    <div class="card p-0" style="height:580px;">
+                    <div class="card-height card p-0">
                       <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
                       <div class="card-body">
                         <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
@@ -175,34 +201,8 @@
                           tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
                         </div>
                       </div>
-                      <div class="card p-0" style="height:580px;">
-                        <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
-                        <div class="card-body">
-                          <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
-                          <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
-                          <div class="d-flex small justify-content-between text-muted">
-                            <p class="pull-left">By Eric Mugendi</p>
-                            <p class="pull-right">Sat 16th Dec 2017</p>
-                          </div>
-                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
-                          </div>
-                        </div>
-                        <div class="card p-0" style="height:580px;">
-                          <img class="card-img-top" src="{% static 'img/articles/fidelodingaroad.jpg' %}" alt="Card image cap">
-                          <div class="card-body">
-                            <h6 class="pt-2 small m-0">NAIROBI COUNTY</h6>
-                            <h4 class="card-width card-title lead"><strong>Mike Sonko Lauches Neighbourhood Street Naming Exercise</strong></h4>
-                            <div class="d-flex small justify-content-between text-muted">
-                              <p class="pull-left">By Eric Mugendi</p>
-                              <p class="pull-right">Sat 16th Dec 2017</p>
-                            </div>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                              tempor incididunt ut labore et dolore magna aliqua. Ut....<a href="">Read more</a></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
                     </div>
+                  </div>
+                </div>
 
-                    {% endblock %}
+                {% endblock %}
