--- a/wajibisha/templates/categories.html
+++ b/wajibisha/templates/categories.html
@@ -17,20 +17,20 @@
 		<div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
 			<p class="small pt-3 pb-3">Group by:</p>
 			<div class="btn-group pl-4 pr-5" role="group" aria-label="Group by"">
-				<button type="button" class="btn pl-4 pr-3 border-2" disabled style="border-top-left-radius:50px;border-bottom-left-radius:50px;color:#808080;border-color: #808080;background-color: #f9f9f9!important;">STATUS</button>
-				<button type="button" class="btn pr-4 border-2"  style="border-top-right-radius:50px;border-bottom-right-radius:50px;color:#F5F5F5;border-color:#0067A3;background-color:#0067A3!important;">CATEGORY</button>
+				<button type="button" class="btn btn-primary-right pl-4 pr-3 border-2" disabled>STATUS</button>
+				<button type="button" class="btn pr-4 btn-primary-left border-2">CATEGORY</button>
 			</div>
 		</div>
 	</div>
   <div class="wrapper clearfix">
-    <div class="container" style="color:#707070;">
+    <div class="container body-text">
       <!--start of first row-->
       <div class="d-flex flex-row pb-5 ">
         <div class="col-6" >
-          <div class="card p-0 offset-1" style="height:200px;width:400px;">
+          <div class="category card p-0 offset-1" style="height:200px;">
             <div class="d-flex flex-row" style='height:150px;'>
               <div class="justify-content-left">
-                <img class="card-img p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
+                <img class="card-img p-0 pl-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;">
               </div>
               <div class="justify-content-right pt-3" >
                 <p class="lead pr-5"><b class="text-large">7</b><span style="font-size:14px;"> Promises</span></p>
@@ -44,10 +44,10 @@
           </div>
         </div>
         <div class="col-6" >
-          <div class="card p-0 pull-left offset-2" style="height:200px;width:400px;">
+          <div class="card p-0 pull-left offset-2" style="height:200px;">
             <div class="d-flex flex-row" style='height:150px;'>
               <div class="justify-content-left">
-                <img class="card-img p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
+                <img class="card-img p-0 pl-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;">
               </div>
               <div class="justify-content-right pt-3" >
                 <p class="lead pr-5"><b class="text-large">2 </b><span style="font-size:14px;"> Promises</span></p>
@@ -64,10 +64,10 @@
       <!--Start of second card row-->
       <div class="d-flex flex-row pt-5">
         <div class="col-6 pb-5" >
-          <div class="card p-0 offset-1" style="height:200px;width:400px;">
+          <div class="card p-0 offset-1" style="height:200px;">
             <div class="d-flex flex-row" style='height:150px;'>
               <div class="justify-content-left">
-                <img class="card-img p-0" src="{% static 'img/tracker/statuses/Unfulfilled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
+                <img class="card-img p-0 pl-0" src="{% static 'img/tracker/statuses/Unfulfilled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;">
               </div>
               <div class="justify-content-right pt-3" >
                 <p class="lead pr-5"><b class="text-large">51 </b><span style="font-size:14px;"> Promises</span></p>
@@ -81,10 +81,10 @@
           </div>
         </div>
         <div class="col-6 pb-5">
-          <div class="card p-0 offset-2" style="height:200px;width:400px;">
+          <div class="card p-0 offset-2" style="height:200px;">
             <div class="d-flex flex-row" style='height:150px;'>
               <div class="justify-content-left">
-                <img class="card-img p-0" src="{% static 'img/tracker/statuses/Stalled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
+                <img class="card-img p-0 pl-0" src="{% static 'img/tracker/statuses/Stalled-portrait.svg' %}" style="height:150px;width:180px;margin-top:-3rem;">
               </div>
               <div class="justify-content-right pt-3" >
                 <p class="lead pr-5"><b class="text-large">3 </b><span style="font-size:14px;"> Promises</span></p>
