--- a/wajibisha/templates/health.html
+++ b/wajibisha/templates/health.html
@@ -27,29 +27,23 @@
               <p class="small pt-3 pb-3">Filter by:</p>
               <div class="d-flex flex-row judtify-content-end pl-4 pt-2 pr-5 ">
                 <div class="dropdown pl-4">
-                  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">FULFILLED
+                  <button class="btn btn-primary-buttons dropdown-toggle" type="button" data-toggle="dropdown">FULFILLED
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
                       <li><a href="#"></a></li>
                     </ul>
                   </div>
                   <div class="dropdown pl-4">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">CATEGORY
+                    <button class="btn btn-primary-buttons dropdown-toggle" type="button" data-toggle="dropdown">CATEGORY
                       <span class="caret"></span></button>
                       <ul class="dropdown-menu">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                       </ul>
                     </div>
                     <div class="dropdown pl-4">
-                      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"style="border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">DURATION
+                      <button class="btn btn-primary-buttons  dropdown-toggle" type="button" data-toggle="dropdown">DURATION
                         <span class="caret"></span></button>
                         <ul class="dropdown-menu">
-                          <li><a href="#"></a></li>
-                          <li><a href="#"></a></li>
                           <li><a href="#"></a></li>
                         </ul>
                       </div>
@@ -67,11 +61,11 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                        style="display:block;width:100%;">
+                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                        style="width:100%;">
                       </td>
                       <td colspan="3">
-                        <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                        <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                         <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                       </td>
                     </tr>
@@ -93,11 +87,11 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="p-0" src="{% static 'img/tracker/statuses/Stalled-portrait.svg' %}" alt="Fulfilled"
-                        style="display:block;width:100%;">
+                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Stalled-portrait.svg' %}" alt="Fulfilled"
+                        style="width:100%;">
                       </td>
                       <td colspan="3">
-                        <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                        <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                         <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                       </td>
                     </tr>
@@ -121,11 +115,11 @@
                     <tbody>
                       <tr>
                         <td style="width:120px;height:150px;">
-                          <img class="p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" alt="Fulfilled"
-                          style="display:block;width:100%;">
+                          <img class="d-block p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" alt="Fulfilled"
+                          style="width:100%;">
                         </td>
                         <td colspan="3">
-                          <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                          <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                           <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                         </td>
                       </tr>
@@ -147,11 +141,11 @@
                     <tbody>
                       <tr>
                         <td style="width:120px;height:150px;">
-                          <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                          style="display:block;width:100%;">
+                          <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                          style="width:100%;">
                         </td>
                         <td colspan="3">
-                          <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                          <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                           <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                         </td>
                       </tr>
@@ -179,11 +173,11 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="p-0" src="{% static 'img/tracker/statuses/Unfulfilled-portrait.svg.svg' %}" alt="Fulfilled"
-                        style="display:block;width:100%;">
+                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Unfulfilled-portrait.svg' %}" alt="Fulfilled"
+                        style="width:100%;">
                       </td>
                       <td colspan="3">
-                        <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                        <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                         <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                       </td>
                     </tr>
@@ -205,11 +199,11 @@
                   <tbody>
                     <tr>
                       <td style="width:120px;height:150px;">
-                        <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                        style="display:block;width:100%;">
+                        <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                        style="width:100%;">
                       </td>
                       <td colspan="3">
-                        <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                        <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                         <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                       </td>
                     </tr>
@@ -235,11 +229,11 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" alt="Fulfilled"
-                      style="display:block;width:100%;">
+                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/In Progress-portrait.svg' %}" alt="Fulfilled"
+                      style="width:100%;">
                     </td>
                     <td colspan="3">
-                      <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                      <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
@@ -261,11 +255,11 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="display:block;width:100%;">
+                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      style="width:100%;">
                     </td>
                     <td colspan="3">
-                      <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                      <button class="btn btn-primary_label rounded-0 pull-right" type="button">HEALTH</button>
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
