--- a/wajibisha/templates/fulfilled.html
+++ b/wajibisha/templates/fulfilled.html
@@ -23,11 +23,11 @@
             <tbody>
               <tr>
                 <td style="width:120px;height:150px;">
-                  <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                  style="display:block;width:100%;">
+                  <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                  style="width:100%;">
                 </td>
                 <td colspan="3">
-                  <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                  <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                   <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                 </td>
               </tr>
@@ -49,11 +49,11 @@
             <tbody>
               <tr>
                 <td style="width:120px;height:150px;">
-                  <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                  style="display:block;width:100%;">
+                  <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                  style="width:100%;">
                 </td>
                 <td colspan="3">
-                  <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HOUSING</button>
+                  <button class="btn btn-primary-label rounded-0 pull-right" type="button">HOUSING</button>
                   <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                 </td>
               </tr>
@@ -79,11 +79,11 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="display:block;width:100%;">
+                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      style="width:100%;">
                     </td>
                     <td colspan="3">
-                      <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">TRAFFIC MANAGEMENT</button>
+                      <button class="btn btn-primary-label rounded-0 pull-right" type="button">TRAFFIC MANAGEMENT</button>
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
@@ -105,11 +105,11 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="display:block;width:100%;">
+                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      style="width:100%;">
                     </td>
                     <td colspan="3">
-                      <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                      <button class="btn btn-primary-label rounded-0 pull-right" type="button" >HEALTH</button>
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
@@ -136,11 +136,11 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="display:block;width:100%;">
+                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      style="width:100%;">
                     </td>
                     <td colspan="3">
-                      <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HEALTH</button>
+                      <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
@@ -162,11 +162,11 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="display:block;width:100%;">
+                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      style="width:100%;">
                     </td>
                     <td colspan="3">
-                      <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">HOUSING</button>
+                      <button class="btn btn-primary-label rounded-0 pull-right" type="button" >HOUSING</button>
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
@@ -193,11 +193,11 @@
                 <tbody>
                   <tr>
                     <td style="width:120px;height:150px;">
-                      <img class="p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="display:block;width:100%;">
+                      <img class="d-block p-0" src="{% static 'img/tracker/statuses/Fulfilled-portrait.svg' %}" alt="Fulfilled"
+                      style="width:100%;">
                     </td>
                     <td colspan="3">
-                      <button class="btn btn-primary rounded-0 pull-right" type="button" style="margin-top:-28px;background-color: #0067A3;color: #ededed;">TRAFFIC MANAGEMENT</button>
+                      <button class="btn btn-primary-label rounded-0 pull-right" type="button">TRAFFIC MANAGEMENT</button>
                       <div class="pt-2"><p class="text-center pt-5">Review and review country health care system</p></div>
                     </td>
                   </tr>
