--- a/wajibisha/static/css/wajibisha.css
+++ b/wajibisha/static/css/wajibisha.css
@@ -269,4 +269,24 @@ img.category-card-img.card-img.p-0.pl-0 {
   background-color: #0067A3;
   color: #ededed; }
 
+/*Promises*/
+.card-block.border {
+  height: 200px;
+  width: 320px;
+  margin-left: -10px;
+  background-color: #ededed;
+  border-color: rgba(112, 112, 112, 0.2); }
+
+img.status-img.card-img.p-0.pl-0 {
+  height: 150px;
+  width: 180px;
+  margin-top: -2rem; }
+
+.status-card.card.p-0.body-text {
+  width: 300px;
+  margin: 10px; }
+
+.status-card-height.d-flex.flex-row {
+  height: 150px; }
+
 /*# sourceMappingURL=../../../../../../../../static/css/wajibisha.css.map */
