--- a/wajibisha/templates/categories.html
+++ b/wajibisha/templates/categories.html
@@ -17,8 +17,8 @@
 		<div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
 			<p class="small pt-3 pb-3">Group by:</p>
 			<div class="btn-group pl-4 pr-5" role="group" aria-label="Group by"">
-				<button type="button" class="btn btn-primary-right pl-4 pr-3 border-2" disabled>STATUS</button>
-				<button type="button" class="btn pr-4 btn-primary-left border-2">CATEGORY</button>
+				<button type="button" class="btn btn-primary-right btn-inactive pl-4 pr-3 border-2" disabled>STATUS</button>
+				<button type="button" class="btn pr-4 btn-primary-left btn-active border-2">CATEGORY</button>
 			</div>
 		</div>
 	</div>
