--- a/wajibisha/templates/promises.html
+++ b/wajibisha/templates/promises.html
@@ -16,7 +16,7 @@
     <div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
       <p class="small pt-3 pb-3">Group by:</p>
       <div class="btn-group pl-4 pr-5" role="group" aria-label="Group by"">
-        <button type="button" class="btn btn-primary pl-4 pr-3 border-2" style="border-top-left-radius:50px;border-bottom-left-radius:50px;border-color:#0067A3;background-color:#0067A3;">STATUS</button>
+        <button type="button" class="btn btn-primary pl-4 pr-3 border-2" style="border-top-left-radius:50px;border-bottom-left-radius:50px;border-color:#0067A3;background-color:#0067A3!important;">STATUS</button>
         <button type="button" class="btn pr-4 border-2" disabled style="border-top-right-radius:50px;border-bottom-right-radius:50px;border-color:#808080;background-color:#f9f9f9!important;">CATEGORY</button>
       </div>
     </div>
@@ -24,10 +24,10 @@
     <div class="row pt-5">
       <!--Start of Card-->
       <div class="col-4">
-        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
-          <div class="d-flex flex-row" style='height:150px;'>
+        <div class="status-card card p-0 body-text">
+          <div class="status-card-height d-flex flex-row">
             <div class="col-6 p-0">
-              <img class="card-img p-0" src="{% static 'img/tracker/categories/Health.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Health.svg' %}">
             </div>
             <div class="col-6 p-0">
               <div class="">
@@ -36,16 +36,15 @@
               </div>
             </div>
           </div>
-          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
-          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+          <div class="card-block border">
           <div class="d-flex flex-row">
-            <div class="justify-content-start" style="font-weight:300;">
+            <div class="justify-content-start font-weight-light">
               <p class="pl-4"><b>1</b></p>
               <p class="pl-4 pt-2 ml-5">Fulfilled</p>
               <p class="pl-4"><b>0</b></p>
               <p class="pt-2 pl-4 ml-5">In Progress</p>
             </div>
-            <div class="justify-content-end offset-1"  style="font-weight:300;">
+            <div class="justify-content-end offset-1 font-weight-light">
               <p><b>13</b><br></p>
               <p class="pt-2 pl-5">Unfulfilled</p>
               <p><b>0</b><br></p>
@@ -63,10 +62,10 @@
       </div>
       <!--Second card column-->
       <div class="col-4">
-        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
-          <div class="d-flex flex-row" style='height:150px;'>
+        <div class="status-card card p-0 body-text">
+          <div class="status-card-height d-flex flex-row">
             <div class="col-6 p-0">
-              <img class="card-img p-0" src="{% static 'img/tracker/categories/Housing.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Housing.svg' %}" >
             </div>
             <div class="col-6 p-0">
               <div class="">
@@ -75,16 +74,15 @@
               </div>
             </div>
           </div>
-          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
-          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+          <div class="card-block border">
           <div class="d-flex flex-row">
-            <div class="justify-content-start" style="font-weight:300;">
+            <div class="justify-content-start font-weight-light">
               <p class="pl-4"><b>1</b></p>
               <p class="pl-4 pt-2 ml-5">Fulfilled</p>
               <p class="pl-4"><b>0</b></p>
               <p class="pt-2 pl-4 ml-5">In Progress</p>
             </div>
-            <div class="justify-content-end offset-1"  style="font-weight:300;">
+            <div class="justify-content-end offset-1 font-weight-light">
               <p><b>13</b><br></p>
               <p class="pt-2 pl-5">Unfulfilled</p>
               <p><b>0</b><br></p>
@@ -102,10 +100,10 @@
       </div>
       <!--Third card column-->
       <div class="col-4">
-        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
-          <div class="d-flex flex-row" style='height:150px;'>
+        <div class="status-card card p-0 body-text">
+          <div class="status-card-height d-flex flex-row">
             <div class="col-6 p-0">
-              <img class="card-img p-0" src="{% static 'img/tracker/categories/Jobs.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+              <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Jobs.svg' %}">
             </div>
             <div class="col-6 p-0">
               <div class="">
@@ -114,16 +112,15 @@
               </div>
             </div>
           </div>
-          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
-          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+          <div class="card-block border">
           <div class="d-flex flex-row">
-            <div class="justify-content-start" style="font-weight:300;">
+            <div class="justify-content-start font-weight-light">
               <p class="pl-4"><b>1</b></p>
               <p class="pl-4 pt-2 ml-5">Fulfilled</p>
               <p class="pl-4"><b>0</b></p>
               <p class="pt-2 pl-4 ml-5">In Progress</p>
             </div>
-            <div class="justify-content-end offset-1"  style="font-weight:300;">
+            <div class="justify-content-end offset-1 font-weight-light">
               <p><b>13</b><br></p>
               <p class="pt-2 pl-5">Unfulfilled</p>
               <p><b>0</b><br></p>
@@ -144,10 +141,10 @@
       <div class="container pt-5">
         <div class="row pt-5">
           <div class="col-4">
-            <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
-              <div class="d-flex flex-row" style='height:150px;'>
+            <div class="status-card card p-0 body-text">
+              <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="card-img p-0" src="{% static 'img/tracker/categories/Governance.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Governance.svg' %}">
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -156,16 +153,15 @@
                   </div>
                 </div>
               </div>
-              <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
-              margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+              <div class="card-block border">
               <div class="d-flex flex-row">
-                <div class="justify-content-start" style="font-weight:300;">
+                <div class="justify-content-start font-weight-light">
                   <p class="pl-4"><b>1</b></p>
                   <p class="pl-4 pt-2 ml-5">Fulfilled</p>
                   <p class="pl-4"><b>0</b></p>
                   <p class="pt-2 pl-4 ml-5">In Progress</p>
                 </div>
-                <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <div class="justify-content-end offset-1 font-weight-light">
                   <p><b>13</b><br></p>
                   <p class="pt-2 pl-5">Unfulfilled</p>
                   <p><b>0</b><br></p>
@@ -182,10 +178,10 @@
             </div>
           </div>
           <div class="col-4">
-            <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
-              <div class="d-flex flex-row" style='height:150px;'>
+            <div class="status-card card p-0 body-text">
+              <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="card-img p-0" src="{% static 'img/tracker/categories/Environment.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Environment.svg' %}">
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -194,16 +190,15 @@
                   </div>
                 </div>
               </div>
-              <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
-              margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+              <div class="card-block border">
               <div class="d-flex flex-row">
-                <div class="justify-content-start" style="font-weight:300;">
+                <div class="justify-content-start font-weight-light">
                   <p class="pl-4"><b>1</b></p>
                   <p class="pl-4 pt-2 ml-5">Fulfilled</p>
                   <p class="pl-4"><b>0</b></p>
                   <p class="pt-2 pl-4 ml-5">In Progress</p>
                 </div>
-                <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <div class="justify-content-end offset-1 font-weight-light">
                   <p><b>13</b><br></p>
                   <p class="pt-2 pl-5">Unfulfilled</p>
                   <p><b>0</b><br></p>
@@ -220,10 +215,10 @@
             </div>
           </div>
           <div class="col-4">
-            <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
-              <div class="d-flex flex-row" style='height:150px;'>
+            <div class="status-card card p-0 body-text">
+              <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="card-img p-0" src="{% static 'img/tracker/categories/Traffic Management.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Traffic Management.svg' %}" >
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -232,16 +227,15 @@
                   </div>
                 </div>
               </div>
-              <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
-              margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+              <div class="card-block border">
               <div class="d-flex flex-row">
-                <div class="justify-content-start" style="font-weight:300;">
+                <div class="justify-content-start font-weight-light">
                   <p class="pl-4"><b>1</b></p>
                   <p class="pl-4 pt-2 ml-5">Fulfilled</p>
                   <p class="pl-4"><b>0</b></p>
                   <p class="pt-2 pl-4 ml-5">In Progress</p>
                 </div>
-                <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <div class="justify-content-end offset-1 font-weight-light">
                   <p><b>13</b><br></p>
                   <p class="pt-2 pl-5">Unfulfilled</p>
                   <p><b>0</b><br></p>
@@ -258,10 +252,10 @@
             </div>
           </div>
           <div class="col-4 pt-5">
-            <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
-              <div class="d-flex flex-row" style='height:150px;'>
+            <div class="status-card card p-0 body-text">
+              <div class="status-card-height d-flex flex-row">
                 <div class="col-6 p-0">
-                  <img class="card-img p-0" src="{% static 'img/tracker/categories/Social Inclusion.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+                  <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/categories/Social Inclusion.svg' %}" >
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
@@ -270,16 +264,15 @@
                   </div>
                 </div>
               </div>
-              <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
-              margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+              <div class="card-block border">
               <div class="d-flex flex-row">
-                <div class="justify-content-start" style="font-weight:300;">
+                <div class="justify-content-start font-weight-light">
                   <p class="pl-4"><b>1</b></p>
                   <p class="pl-4 pt-2 ml-5">Fulfilled</p>
                   <p class="pl-4"><b>0</b></p>
                   <p class="pt-2 pl-4 ml-5">In Progress</p>
                 </div>
-                <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <div class="justify-content-end offset-1 font-weight-light">
                   <p><b>13</b><br></p>
                   <p class="pt-2 pl-5">Unfulfilled</p>
                   <p><b>0</b><br></p>
@@ -288,7 +281,7 @@
               </div>
             </div>
             <div class="d-flex flex-row pb-3 pt-3">
-              <p class="pt-0 mr-auto">
+              <p class="pt-0 mr-auto">  
                 <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
                 <span >Share</span></p>
                 <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
