--- a/wajibisha/templates/blocks/newsletter.html
+++ b/wajibisha/templates/blocks/newsletter.html
@@ -2,7 +2,7 @@
 <div class="container newsletter">
   <div class="d-flex justify-content-center pt-5 pb-5"><hr align="center" width="32%" style="border-color:#707070;">
 </div>
-  <h4 class="text-center pt-3" style="color:#707070;">Sign up for weekly for weekly tracker updates in your inbox below.</h4>
+  <h4 class="text-center pt-3 body-text">Sign up for weekly for weekly tracker updates in your inbox below.</h4>
   <form class="form-inline justify-content-center pt-5 pb-5">
     <div class="col-lg-8 center-block">
       <div class="input-group input-group-lg border rounded">
