--- a/wajibisha/templates/blocks/promises-header.html
+++ b/wajibisha/templates/blocks/promises-header.html
@@ -30,11 +30,11 @@
     </div>
 
     <div class="column-third" style="padding-left:15rem;">
-      <div class="card p-0" style="width:600px;height:260px;margin-top:-8rem;color:#707070:">
+      <div class="card p-0 body-text" style="width:600px;height:260px;margin-top:-8rem;">
         <div class="card-title pt-3" style="color:#707070;">OVERVIEW</div>
         <div class="card-body">
 
-          <div class="column-third" style="color:#707070;">
+          <div class="column-third body-text">
             <div class="d-flex flex-column pl-3">
               <p class="text-left">
                 <b class="text-success" style="font-size:1.4rem;">7</b><br>
@@ -46,12 +46,12 @@
               </p>
             </div>
           </div>
-          <div class="column-third" style="color:#707070;">
+          <div class="column-third body-text">
             <img src="{% static 'img/tracker/Ring Pie Chart.svg' %}">
             <p class="pt-0 text-center pr-5 pl-5" style="margin-top:-8rem;font-weight:100;"><b style="font-size:2rem;">63</b> Promises in total</p>
           </div>
 
-          <div class="column-third" style="color:#707070;">
+          <div class="column-third body-text">
             <div class="d-flex flex-column pl-3 pr-2">
               <p class="text-left">
                 <b class="text-warning" style="font-size:1.4rem;">6</b><br>
