--- a/wajibisha/templates/blocks/tweets.html
+++ b/wajibisha/templates/blocks/tweets.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <section class="tweet-section" style="width:100%;height:auto;">
 <div class=" container pb-5 pt-5">
-  <div class="pt-0 d-flex justify-content-center" style="color:#707070;"><h3>Latest tweets<h3></div>
+  <div class="pt-0 d-flex justify-content-center body-text"><h3>Latest tweets<h3></div>
 	<div class="row">
 		<div class="card-group pb-2" style="color:#707070;">
 			<div class="tweet-card card border rounded" style="border-color:#bfd9e8!important;">
